--- a/config/packages/doctrine.yaml
+++ b/config/packages/doctrine.yaml
@@ -24,3 +24,5 @@ doctrine:
                 dir: '%kernel.project_dir%/src/Entity'
                 prefix: 'App\Entity'
                 alias: App
+    role_hierarchy:
+        ROLE_ADMIN: [ROLE_EDITOR]
